# sidrograd

./: .gitignore  .htaccess  LICENSE  README.md  countries.csv  data.csv  data.json  data.txt  data.xlsx  data1.csv  load_04_10_24.py  load_18_07_24.py  load_countries.py  load_countryes.py  load_data.py  oksm.csv  pyproject.toml  requirements.txt  temp.py
api_app/: serializers.py  services.py  tests.py  urls.py  views.py
auth_app/: admin.py  apps.py  models.py  serializers.py  services.py  transport.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_alter_user_password.py  0004_alter_user_password.py  0005_alter_user_password.py  0006_rename_record_pin_alter_user_password.py  0007_alter_user_client_alter_user_password.py  0008_alter_user_password.py  0009_alter_user_password.py  0010_alter_user_password.py  0011_alter_user_password.py  0012_alter_user_password.py  (+48 more)
cart_app/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
catalog_app/: admin.py  apps.py  commons.py  models.py  serializers.py  tests.py  urls.py  views.py
client_app/: admin.py  apps.py  models.py  serializers.py  views.py
image_app/: admin.py  apps.py  models.py  serializers.py
index_app/: admin.py  apps.py  models.py
order_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
repositories/: good_repository.py
server/: admin.py  base.py  settings.py  urls.py
services/: download_goods_to_file.py
wish_list_app/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
(+103 files in other folders)
